--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-
-<script async src="//cdn.iframe.ly/embed.js?api_key={API_KEY}"></script>
-
-<div class="iframely-embed">
-  <div class="iframely-responsive">
-    <a data-iframely-url href="{URL_TO_EMBED_HERE}"></a>
-  </div>
-</div>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="linksstyle.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script async src="//cdn.iframe.ly/embed.js?api_key={API_KEY}"></script>  
+  </head>
+  <body>
+    
+    <div class="iframely-embed">
+      <div class="iframely-responsive">
+      <a data-iframely-url href="{URL_TO_EMBED_HERE}"></a>
+      </div>
+    </div>
+  </body>
+</html>
