--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="linksstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script async src="//cdn.iframe.ly/embed.js?api_key={769013948986104b842001}"></script>  
   </head>
@@ -8,7 +7,7 @@
     
     <div class="iframely-embed">
       <div class="iframely-responsive">
-      <a data-iframely-url href="{URL_TO_EMBED_HERE}"></a>
+      <a data-iframely-url href="{https://twitter.com/johnkrausphotos/status/1566171097539690496}"></a>
       </div>
     </div>
   </body>
