--- a/index.html
+++ b/index.html
@@ -1,4 +1,104 @@
 <html>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
+<style>
+
+  body {
+    background: black;
+  }
+
+  ul {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 40px;
+    list-style-type: none;
+    margin: 0;
+    margin-left:-12px;
+    padding: 0;
+    background-color: black;
+    font-size: 16px;
+    font-family: Roboto;
+    font-weight: 600;
+    border: 10px solid black;
+  }
+
+  li {
+    float: left;
+    margin-left: 0px;
+  }
+
+  li a {
+    display: block;
+    color: light grey;
+    text-align: center;
+    padding: 10px 30px;
+    text-decoration: none;
+  }
+
+  li a.active {
+    border-radius: 10px;
+    background-color: #0e3386;
+    color: white;
+  }
+
+  li a.inactive {
+    border-radius: 10px;
+    background-color: black;
+    color: #555555
+  }
+
+  .button {
+    margin-left: 16px;
+    border-radius: 4px;
+    background-color: #393433;
+    color: white;
+    visited: white;
+    font-weight: 300;
+    font-size: 14px;
+    padding: 8px 20px;
+    text-decoration: none;
+    font-family: Roboto;
+
+  }
+  .material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  }
+
+@media(min-width: 900px)
+    {
+    .button
+    {
+    display:none;
+    }
+    #blackspace
+    {
+    display:none;
+    }
+    #schedulenote
+    {
+    display:none;
+    }
+    }
+
+@media screen and (max-width: 900px) {
+    #containerSchedule {
+        display: none;
+    }
+}
+
+</style>
+
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script async src="//cdn.iframe.ly/embed.js?api_key={769013948986104b842001}"></script>  
