--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-
+<html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script async src="//cdn.iframe.ly/embed.js?api_key=769013948986104b842001"></script>  
+    <script async src="//cdn.iframe.ly/embed.js?api_key={769013948986104b842001}"></script>  
   </head>
   <body>
     
     <div class="iframely-embed">
       <div class="iframely-responsive">
-      <a data-iframely-url href="https://twitter.com/johnkrausphotos/status/1566171097539690496"></a>
+      <a data-iframely-url href="{https://twitter.com/johnkrausphotos/status/1566171097539690496}"></a>
       </div>
     </div>
   </body>
+</html>
