--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script async src="//cdn.iframe.ly/embed.js?api_key=769013948986104b842001"></script>  
+    <script async src="//cdn.iframe.ly/embed.js?api_key=769013948986104b842001">
+    <script src="//cdn.iframe.ly/embed.js?theme=dark"></script>
+  
   </head>
   <body>
     
