--- a/index.html
+++ b/index.html
@@ -23,5 +23,13 @@
       <blockquote class="twitter-tweet" data-dnt="true" align="center"><p lang="en" dir="ltr">Less?</p>&mdash; Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1344036755180314625?ref_src=twsrc%5Etfw">December 29, 2020</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
+
+      <div class="iframely-embed"><div class="iframely-responsive" style="padding-bottom: 52.3438%; padding-top: 120px;"><a href="https://www.buzzfeednews.com/article/ryanmac/elon-musk-spacex-employees-car-crash-coronavirus" data-iframely-url="//iframely.net/iIhl8sb"></a></div></div><script async src="//iframely.net/embed.js"></script>
+
+      <div class="iframely-embed"><div class="iframely-responsive" style="padding-bottom: 54.9%; padding-top: 120px;"><a href="https://time.com/person-of-the-year-2021-elon-musk/" data-iframely-url="//iframely.net/duGLcnD"></a></div></div><script async src="//iframely.net/embed.js"></script>
+
+      <div class="iframely-embed"><div class="iframely-responsive" style="padding-bottom: 75%; padding-top: 120px;"><a href="https://www.businessinsider.com/us-general-elon-musk-spacex-starlink-destroyed-putin-information-campaign-2022-6" data-iframely-url="//iframely.net/cpN9tVK"></a></div></div><script async src="//iframely.net/embed.js"></script>
+
+      
   </body>
 </html>
