--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
       <div class="iframely-embed"><div class="iframely-responsive" style="padding-bottom: 75%; padding-top: 120px;"><a href="https://www.businessinsider.com/us-general-elon-musk-spacex-starlink-destroyed-putin-information-campaign-2022-6" data-iframely-url="//iframely.net/cpN9tVK"></a></div></div><script async src="//iframely.net/embed.js"></script>
 
-      
+      <div class="iframely-embed"><div class="iframely-responsive" style="padding-bottom: 56.2205%; padding-top: 120px;"><a href="https://weather.com/en-IN/india/space/news/2022-07-04-nasa-administrator-warns-about-chinas-attempt-to-takeover-moon" data-iframely-url="//iframely.net/TFwn46R"></a></div></div><script async src="//iframely.net/embed.js"></script>
+
+      <div><div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.25%;"><iframe src="//iframely.net/9K8gFKf?click_to_play=1&playerjs=1" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen scrolling="no" allow="autoplay *; accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *;"></iframe></div></div>
   </body>
 </html>
