--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     
     <div class="iframely-embed">
 
+      <blockquote class="twitter-tweet" data-dnt="true" align="center"><p lang="en" dir="ltr">SLS has cost over 23 Billion to date and 6 years late, while expecting to utilize used engines from a decades old program with historical launch scrub issues? Wtf</p>&mdash; OttoPilot (@6463dc) <a href="https://twitter.com/6463dc/status/1566174832495980544?ref_src=twsrc%5Etfw">September 3, 2022</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
       <div class="iframely-responsive">
       <a data-iframely-url href="https://twitter.com/nextspaceflight/status/1566167815438090244"></a>
       </div>
