--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
       <blockquote class="twitter-tweet" data-dnt="true" align="center"><p lang="en" dir="ltr">SLS has cost over 23 Billion to date and 6 years late, while expecting to utilize used engines from a decades old program with historical launch scrub issues? Wtf</p>&mdash; OttoPilot (@6463dc) <a href="https://twitter.com/6463dc/status/1566174832495980544?ref_src=twsrc%5Etfw">September 3, 2022</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-      <div class="iframely-responsive">
-      <a data-iframely-url href="https://twitter.com/nextspaceflight/status/1566167815438090244"></a>
-      </div>
+<blockquote class="twitter-tweet" data-dnt="true" align="center"><p lang="en" dir="ltr">Falcon 9 flew over SLS, who many tourists were expecting to launch tonight. I kept telling them, NO, other pad!</p>&mdash; Michael Baylor (@nextspaceflight) <a href="https://twitter.com/nextspaceflight/status/1566611683950432256?ref_src=twsrc%5Etfw">September 5, 2022</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       
+<blockquote class="twitter-tweet" data-dnt="true" align="center"><p lang="en" dir="ltr">So, Starship has a chance of being first, after all.</p>&mdash; GVF (@i_gvf) <a href="https://twitter.com/i_gvf/status/1566147059320852480?ref_src=twsrc%5Etfw">September 3, 2022</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
       <div class="iframely-responsive">
       <a data-iframely-url href="https://twitter.com/nextspaceflight/status/1564827171935469568"></a>
       </div>
